base/_helpers.scss
/*------------------------------------*\
    $HELPER
\*------------------------------------*/

/**
 * Add/remove floats
 */
.float--right   { float:right!important; }
.float--left    { float:left !important; }
.float--none    { float:none !important; }


/**
 * Text alignment
 */ 
 
.text--left     { text-align:left  !important; }
.text--center   { text-align:center!important; }
.text--right    { text-align:right !important; }


/**
 * Font weights
 */
.weight--light      { font-weight:300!important; }
.weight--normal     { font-weight:400!important; }
.weight--semibold   { font-weight:600!important; }

/**
* Font styled
*/
.text--unitalic { font-style: normal!important; }


/**
* Positions
*/
.relative       { position: relative!important; }
.absolute       { position: absolute!important; }
.fixed          { position: fixed!important; }

/**
* Vertical positions
*/
.middle     { vertical-align: middle!important; }
.bottom     { vertical-align: bottom!important; }
.top        { vertical-align: top!important; }
.super      { vertical-align: super!important; }

/**
* Display force
*/

.inline-block   { display: inline-block!important; }
.block          { display: block!important; }

/**
* Visibility
*/

.invisible      { visually: hidden!important; }
.transparent    { @include opacity(0); }
.mask           { overflow: hidden; }
.hide           { display: none; }

/**
 * Add/remove margins
 */
.push           { margin:       $base-spacing-unit!important; }
.push--top      { margin-top:   $base-spacing-unit!important; }
.push--right    { margin-right: $base-spacing-unit!important; }
.push--bottom   { margin-bottom:$base-spacing-unit!important; }
.push--left     { margin-left:  $base-spacing-unit!important; }
.push--ends     { margin-top:   $base-spacing-unit!important; margin-bottom:$base-spacing-unit!important; }
.push--sides    { margin-right: $base-spacing-unit!important; margin-left:  $base-spacing-unit!important; }

.push-half          { margin:       $half-spacing-unit!important; }
.push-half--top     { margin-top:   $half-spacing-unit!important; }
.push-half--right   { margin-right: $half-spacing-unit!important; }
.push-half--bottom  { margin-bottom:$half-spacing-unit!important; }
.push-half--left    { margin-left:  $half-spacing-unit!important; }
.push-half--ends    { margin-top:   $half-spacing-unit!important; margin-bottom:$half-spacing-unit!important; }
.push-half--sides   { margin-right: $half-spacing-unit!important; margin-left:  $half-spacing-unit!important; }


.push-double          { margin:       $double-spacing-unit!important; }
.push-double--top     { margin-top:   $double-spacing-unit!important; }
.push-double--right   { margin-right: $double-spacing-unit!important; }
.push-double--bottom  { margin-bottom:$double-spacing-unit!important; }
.push-double--left    { margin-left:  $double-spacing-unit!important; }
.push-double--ends    { margin-top:   $double-spacing-unit!important; margin-bottom:$double-spacing-unit!important; }
.push-double--sides   { margin-right: $double-spacing-unit!important; margin-left:  $double-spacing-unit!important; }

.flush          { margin:       0!important; }
.flush--top     { margin-top:   0!important; }
.flush--right   { margin-right: 0!important; }
.flush--bottom  { margin-bottom:0!important; }
.flush--left    { margin-left:  0!important; }
.flush--ends    { margin-top:   0!important; margin-bottom:0!important; }
.flush--sides   { margin-right: 0!important; margin-left:  0!important; }


/**
 * Add/remove paddings
 */
.soft           { padding:       $base-spacing-unit!important; }
.soft--top      { padding-top:   $base-spacing-unit!important; }
.soft--right    { padding-right: $base-spacing-unit!important; }
.soft--bottom   { padding-bottom:$base-spacing-unit!important; }
.soft--left     { padding-left:  $base-spacing-unit!important; }
.soft--ends     { padding-top:   $base-spacing-unit!important; padding-bottom:$base-spacing-unit!important; }
.soft--sides    { padding-right: $base-spacing-unit!important; padding-left:  $base-spacing-unit!important; }

.soft-half           { padding:       $half-spacing-unit!important; }
.soft-half--top      { padding-top:   $half-spacing-unit!important; }
.soft-half--right    { padding-right: $half-spacing-unit!important; }
.soft-half--bottom   { padding-bottom:$half-spacing-unit!important; }
.soft-half--left     { padding-left:  $half-spacing-unit!important; }
.soft-half--ends     { padding-top:   $half-spacing-unit!important; padding-bottom:$half-spacing-unit!important; }
.soft-half--sides    { padding-right: $half-spacing-unit!important; padding-left:  $half-spacing-unit!important; }

.soft-double           { padding:       $double-spacing-unit!important; }
.soft-double--top      { padding-top:   $double-spacing-unit!important; }
.soft-double--right    { padding-right: $double-spacing-unit!important; }
.soft-double--bottom   { padding-bottom:$double-spacing-unit!important; }
.soft-double--left     { padding-left:  $double-spacing-unit!important; }
.soft-double--ends     { padding-top:   $double-spacing-unit!important; padding-bottom:$double-spacing-unit!important; }
.soft-double--sides    { padding-right: $double-spacing-unit!important; padding-left:  $double-spacing-unit!important; }

.hard           { padding:       0!important; }
.hard--top      { padding-top:   0!important; }
.hard--right    { padding-right: 0!important; }
.hard--bottom   { padding-bottom:0!important; }
.hard--left     { padding-left:  0!important; }
.hard--ends     { padding-top:   0!important; padding-bottom:0!important; }
.hard--sides    { padding-right: 0!important; padding-left:  0!important; }

